--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 # flask package
 Flask>=1.1.2,<1.2
 Flask-RESTful==0.3.8
-flask-cors
+Flask-Cors==3.0.10
 
 # pdf generator lib
-WeasyPrint
+WeasyPrint==52.2
 
 # uWSGI service package
 uWSGI>=2.0.18,<2.1
