--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -1,9 +1,18 @@
 server {
     # production port
     listen 80;
+
+    location / {
+        proxy_pass http://client:5050;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade; 
+    }
     
     # else use uwsgi server to server data
-    location / {
+    location /api {
         uwsgi_pass app:8080; # sends traffic to port 8080 from docker image
         include /etc/nginx/uwsgi_params; # from https://uwsgi-docs.readthedocs.io/en/latest/Nginx.html#what-is-the-uwsgi-params-file
     }
