--- a/.gitignore
+++ b/.gitignore
@@ -104,6 +104,8 @@ celerybeat.pid
 # Environments
 .env
 .venv
+.env.local
+.env.*.local
 env/
 venv/
 ENV/
@@ -127,3 +129,25 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# vue.js
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+.DS_Store
+/client_new/node_modules
+/client_new/dist
+
